Fix daily report edit page not showing correct report info

--- a/resources/sass/partials/_partials.scss
+++ b/resources/sass/partials/_partials.scss
@@ -125,5 +125,5 @@
 }
 
 .cursor-info {
-    cursor: help;
+    cursor: help !important;
 }
